--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bottender/qna-maker": "^1.5.1-alpha.9",
     "bottender": "1.5.1-alpha.9",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
