--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "firebase-admin": "^9.11.1",
+    "is-base64": "^1.1.0",
     "jest": "27.0.6",
     "prettier": "2.3.2"
   }
